# San-Xing

./: .gitignore  BehaviorScoreManager.js  BehaviorScoresService.js  Config.js  DailyReport.js  DevTools.js  EmailService.js  LICENSE  Main.js  PromptBuilderService.js  README.md  README_IMPLEMENTATION.md  ReportOrchestrator.js  SchemaService.js  ScoreCalculatorFactory.js  SheetAdapter.js  Showdown.js  SleepQualityService.js  WeeklyReport.js  config.example.toml  pyproject.toml  run.py  run_dashboard.py
docs/: AI_Personal_Coach_design.md  DATA_SECURITY.md  Meta-Awareness_planning.md  README.md  README_IMPLEMENTATION.md  Roadmap_and_Milestones.md  SRS_AI_PERSONAL_COACH.md  SRS_SanXing.md  SRS_Visualization.md  SanXing_design.md  (+6 more)
visualization/: DATA_LOADING_ANALYSIS.md  README.md  README_DASHBOARD.md  README_REAL_DATA.md  activity_analysis.py  advanced_dashboard_demo.py  dashboard.py  debug_data_loading.py  download_data.py  generate_sample_data.py  health_dashboard.py  kpi_dashboard_example.py  launch_dashboard.py  pyproject.toml  real_data_dashboard.py  requirements.txt  robust_data_loader.py  run_all.py  run_dashboard.py  run_real_dashboard.py  sleep_analysis.py  test_implementation.py  test_real_streamlit.py
visualization/analytics/: __init__.py  insight_engine.py  kpi_calculator.py  sleep_quality_calculator.py  statistical_utils.py
visualization/components/: __init__.py  data_viz.py  drill_down_views.py  insight_display.py  kpi_cards.py  kpi_grid.py
visualization/tests/: __init__.py  test_kpi_calculator.py  test_statistical_utils.py  test_ui_components.py
(+42 files in other folders)
