[project]
name = "san-xing-visualization"
version = "0.1.0"
description = "Data visualization tools for San-Xing diary analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "requests>=2.31.0",
    "streamlit>=1.32.0"
]

[tool.uv]
managed = true